<resources>
    <string name="app_name">HotelButler</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="starter">Starter</string>
    <string name="in_room_dinning_menu">In-Room Dinning Menu</string>
    <string name="schedule_for_cleaning">Schedule For Cleaning</string>
    <string name="other_service">Other Service</string>
    <string name="second">Second</string>
    <string name="main_course">Main Course</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="extra_towel">Extra Towel</string>
    <string name="laundry_pick_up">Laundry Pick Up</string>
    <string name="refill_minibar">Refill MiniBar</string>
    <string name="submit">Submit</string>
    <string name="general_cleaning">General Cleaning</string>
</resources>
